NetBSD Problem Report #43702

From jruohone@gmail.com  Wed Aug  4 10:59:03 2010
Return-Path: <jruohone@gmail.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 96B0663BB83
	for <gnats-bugs@gnats.netbsd.org>; Wed,  4 Aug 2010 10:59:03 +0000 (UTC)
Message-Id: <20100804105857.9E8EAF890@marx.bitnet>
Date: Wed,  4 Aug 2010 13:58:57 +0300 (EEST)
From: Jukka Ruohonen <jruohonen@iki.fi>
Sender: a b <jruohone@gmail.com>
Reply-To: jruohonen@iki.fi
To: gnats-bugs@gnats.NetBSD.org
Subject: hpet* at acpi? needs more work
X-Send-Pr-Version: 3.95

>Number:         43702
>Category:       kern
>Synopsis:       hpet* at acpi? needs more work
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    jruoho
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Aug 04 11:00:01 +0000 2010
>Closed-Date:    Tue Jun 14 13:59:55 +0000 2011
>Last-Modified:  Tue Jun 14 14:00:13 +0000 2011
>Originator:     Jukka Ruohonen
>Release:        5.0 - HEAD
>Organization:
-
>Environment:
>Description:

Currently hpet(4) -- which, btw, also lacks a manual page -- attachs to
acpi0 based only the PNP/HID -information.  This however does not work on
some ACPI-based systems that expose the HPET information via a so-called
IA-PC High Precision Event Timer Table.

>How-To-Repeat:

Code and DSDT exploration.

>Fix:

Make it optionally attach also via information from the HPET table.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->jruoho
Responsible-Changed-By: jruoho@NetBSD.org
Responsible-Changed-When: Wed, 04 Aug 2010 11:03:48 +0000
Responsible-Changed-Why:

I know how this should be done. So I'll also deal with this (incl. the 
manual page) some day.



State-Changed-From-To: open->analyzed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Wed, 04 Aug 2010 11:03:48 +0000
State-Changed-Why:


State-Changed-From-To: analyzed->closed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Tue, 14 Jun 2011 13:59:55 +0000
State-Changed-Why:
Fixed.


From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43702 CVS commit: src
Date: Tue, 14 Jun 2011 13:59:24 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Tue Jun 14 13:59:24 UTC 2011

 Modified Files:
 	src/share/man/man4/man4.x86: hpet.4
 	src/sys/arch/amd64/conf: GENERIC
 	src/sys/arch/i386/conf: ALL GENERIC
 	src/sys/dev/acpi: acpi.c acpivar.h files.acpi hpet_acpi.c

 Log Message:
 Try to attach hpet(4) also via a specific HPET table. Fixes PR kern/43702.


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/share/man/man4/man4.x86/hpet.4
 cvs rdiff -u -r1.319 -r1.320 src/sys/arch/amd64/conf/GENERIC
 cvs rdiff -u -r1.307 -r1.308 src/sys/arch/i386/conf/ALL
 cvs rdiff -u -r1.1032 -r1.1033 src/sys/arch/i386/conf/GENERIC
 cvs rdiff -u -r1.244 -r1.245 src/sys/dev/acpi/acpi.c
 cvs rdiff -u -r1.69 -r1.70 src/sys/dev/acpi/acpivar.h
 cvs rdiff -u -r1.89 -r1.90 src/sys/dev/acpi/files.acpi
 cvs rdiff -u -r1.5 -r1.6 src/sys/dev/acpi/hpet_acpi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.