Try to attach hpet(4) also via a specific HPET table. Fixes PR kern/43702.